--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "static": "yarn run build && next export"
+    "static": "yarn run build && next export",
+    "prettier-check": "prettier -l \"**/*.js\"",
+    "prettier-write": "prettier --write \"**/*.js\""
+  },
+  "devDependencies": {
+    "prettier": "^1.18.2"
   }
 }
