json.json - add redirect from /resume.pdf to /static/resume-zuzana-jeschke.pdf

--- a/now.json
+++ b/now.json
@@ -8,5 +8,14 @@
       "use": "@now/static-build",
       "config": { "distDir": "out" }
     }
+  ],
+  "routes": [
+    {
+      "src": "/resume.pdf",
+      "status": 302,
+      "headers": {
+        "Location": "/static/resume-zuzana-jeschke.pdf"
+      }
+    }
   ]
 }
