--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next-images": "^1.1.2",
     "now": "^16.3.1",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "dev": "next",
