--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.7",
     "next": "^9.3.2",
     "next-images": "^1.1.2",
     "now": "^16.3.1",
